@@ -271,3 +271,4 @@ qpdf npages 0
 QPDF already reserved object 0
 QPDFObjectHandle indirect with 0 objid 0
 QPDF object id 0 0
+QPDF recursion loop in resolve 0
