@@ -2,4 +2,9 @@ WARNING: issue-100.pdf: file is damaged
 WARNING: issue-100.pdf (file position 736): xref not found
 WARNING: issue-100.pdf: Attempting to reconstruct cross-reference table
 WARNING: issue-100.pdf (object 5 0, file position 489): attempting to recover stream length
-issue-100.pdf (object 6 0, file position 59): expected n n obj
+WARNING: issue-100.pdf: file is damaged
+WARNING: issue-100.pdf (object 6 0, file position 59): expected n n obj
+WARNING: issue-100.pdf: Attempting to reconstruct cross-reference table
+WARNING: issue-100.pdf (object 5 0, file position 489): attempting to recover stream length
+WARNING: issue-100.pdf (file position 1121): loop detected resolving object 6 0
+issue-100.pdf (trailer, file position 953): dictionary key is not not a name token
