@@ -1,2 +1,4 @@
-WARNING: issue-119.pdf (file position 336): loop detected resolving object 4 0
-issue-119.pdf (file position 298): dictionary key is not not a name token
+WARNING: issue-119.pdf: file is damaged
+WARNING: issue-119.pdf (xref table, file position 625): invalid xref entry (obj=0)
+WARNING: issue-119.pdf: Attempting to reconstruct cross-reference table
+operation for Dictionary object attempted on object of wrong type
